Include/PDCFUNC.h

/*
 *	Initialize etc...
 */
unsigned long WINAPI
PDC_Init(
		unsigned long 			*pErrorCode
		);
unsigned long WINAPI
PDC_DetectDevice(
		unsigned long			nInterfaceCode,
		unsigned long			*pDetectNo,
		unsigned long			nDetectNum,
		unsigned long			nDetectParam,
		PPDC_DETECT_NUM_INFO	pDetectNumInfo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_DetectDeviceLV(
		unsigned long			nInterfaceCode,
		unsigned long			*pDetectNo,
		unsigned long			nDetectNum,
		unsigned long			nDetectParam,
		unsigned long			*pDeviceNum,
		unsigned long			*pDeviceCode,
		unsigned long			*pTmpDeviceNo,
		unsigned long			*pInterfaceCode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_OpenDevice(
		PPDC_DETECT_INFO		pDetectInfo,
		unsigned long			*pDeviceNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_OpenDeviceLV(
		unsigned long			nDeviceCode,
		unsigned long			nTmpDeviceNo,
		unsigned long			nInterfaceCode,
		unsigned long			*pDeviceNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_CloseDevice(
		unsigned long			nDeviceNo,
		unsigned long			*pErrorCode
		);
#define PDC_GetDeviceName  PDC_GetDeviceNameW
#define PDC_GetDeviceName  PDC_GetDeviceNameA
unsigned long WINAPI
PDC_IsFunction(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nFunction,
		char					*pFlag,
		unsigned long			*pErrorCode
		);
/*
 *	Get List
 */
unsigned long WINAPI
PDC_GetRecordRateList(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pSize,
		unsigned long			*pList,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetResolutionList(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pSize,
		unsigned long			*pList,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetShutterSpeedFpsList(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pSize,
		unsigned long			*pList,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetExistChildDeviceList(
		unsigned long			nDeviceNo,
		unsigned long			*pSize,
		unsigned long			*pList,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetPartitionList(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pCount,
		unsigned long			*pFrames,
		unsigned long			*pBlocks,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetPartitionList(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nCount,
		unsigned long			*pBlocks,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetColorType(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		char					*pMode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetStatus(
		unsigned long			nDeviceNo,
		unsigned long			*pStatus,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetPartitionIncMode(
		unsigned long			nDeviceNo,
		unsigned long			*pMode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetResolution(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pWidth,
		unsigned long			*pHeight,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetMaxPartition(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pCount,
		unsigned long			*pBlock,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetCurrentPartition(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetMaxFrames(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pFrames,
		unsigned long			*pBlocks,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetMemoryModePartition(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetMemRecordRate(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pRate,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetMemResolution(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			*pWidth,
		unsigned long			*pHeight,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetMemFrameInfo(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		PPDC_FRAME_INFO			pFrame,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetStatus(
		unsigned long			nDeviceNo,
		unsigned long			nMode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetRecReady(
		unsigned long			nDeviceNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetEndless(
		unsigned long			nDeviceNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_TriggerIn(
		unsigned long			nDeviceNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetPartitionIncMode(
		unsigned long			nDeviceNo,
		unsigned long			nMode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetExternalInMode(
		unsigned long			nDeviceNo,
		unsigned long			nPort,
		unsigned long			nMode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetExternalOutMode(
		unsigned long			nDeviceNo,
		unsigned long			nPort,
		unsigned long			nMode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetRecordRate(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nRate,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetTriggerMode(
		unsigned long			nDeviceNo,
		unsigned long			nMode,
		unsigned long			nAFrames,
		unsigned long			nRFrames,
		unsigned long			nRCount,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetResolution(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nWidth,
		unsigned long			nHeight,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetShutterSpeedFps(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nFps,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetCurrentPartition(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetColorType(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		char					nMode,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_SetMemoryModePartition(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nNo,
		unsigned long			*pErrorCode
		);
/*
 *	Get Image
 */
unsigned long WINAPI
PDC_GetLiveImageData(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		unsigned long			nBitDepth,
		void					*pData,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI
PDC_GetMemImageData(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		long					nFrameNo,
		unsigned long			nBitDepth,
		void					*pData,
		unsigned long			*pErrorCode
		);
#define PDC_MRAWFileSaveOpen  PDC_MRAWFileSaveOpenW
#define PDC_MRAWFileSaveOpen  PDC_MRAWFileSaveOpenA
unsigned long WINAPI 
PDC_MRAWFileSave(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo,
		long					nFrameNo,
		unsigned long			*pErrorCode
		);
unsigned long WINAPI 
PDC_MRAWFileSaveClose(
		unsigned long			nDeviceNo,
		unsigned long			nChildNo, 
		unsigned long			*pErrorCode
		);